# lambda-golem

./: Cargo.toml
src/: bindings.rs  lib.rs
wit/: world.wit
