[package]
name = "lambda-golem-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.24.0", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:lambda-golem-bot"

[package.metadata.component.dependencies]
